# Search

./: .gitignore  README.md  pyproject.toml
LlamaFactory/: pyproject.toml
LlamaFactory/data/: dataset_info.json
LlamaFactory/src/llamafactory/data/: loader.py  mm_plugin.py
LlamaFactory/src/llamafactory/hparams/: data_args.py  model_args.py
LlamaFactory/train/: sft.yaml
configs/: pipeline.example.json
data/: chinese_simpleqa.jsonl  rl_train_data.parquet  simple_qa.jsonl  web_questions.jsonl  web_questions.parquet
eval/: get_eval.py  get_response.py  print_acc.py  prompts.py  run.sh
eval/dataset/: test_data.jsonl
eval/tool_utils/: apis.py  tool_agent_loop.py  tool_parser.py  tools.py  utils.py
search_agent/: __init__.py  agent.py  cli.py  config.py  dataset.py  model_client.py  parser.py  prompts.py  search.py  workflows.py
tests/: test_parser.py
to_hf/: legacy_model_merger.py  model_merge.sh
verl/examples/data_preprocess/: gsm8k_tool_agent_loop.py
verl/examples/sglang_multiturn/: run_qwen2.5-3b_gsm8k_multiturn.sh
verl/examples/sglang_multiturn/config/: search_grpo.yaml
verl/scripts/: run_grpo.sh
verl/verl/experimental/agent_loop/: agent_loop.py  tool_agent_loop.py  tool_parser.py
verl/verl/tools/: custom_search_tool.py
verl/verl/tools/search_utils/: tools.py  utils.py
verl/verl/tools/utils/: tool_registry.py
verl/verl/trainer/: constants_ppo.py
verl/verl/trainer/config/: sft_trainer.yaml
verl/verl/trainer/ppo/: ray_trainer.py  reward.py
verl/verl/utils/dataset/: sft_dataset.py
verl/verl/workers/reward_manager/: __init__.py  (+2 more)
(+10 files in other folders)
